# sr-cpo-safety-gym

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
runs/: README.md
scripts/: compare_depth_sweeps.py  eval_checkpoint.py  smoke_1epoch.py  summarize_relxy_logs.py  trace_eval_goal_resampling.py  train_full.py  train_pointgoal1.py  verify_invariants.py
slurm/: QOS_NOTES.md  baseline_cl0001_3seed.sh  constraint_activation_sweep.sh  constraint_effect_3seed.sh  constraint_pressure_sweep.sh  depth8_sgd_sweep.sh  depth_sgd4_cmdp.sh  depth_sgd4_residual.sh  depth_sweep_residual.sh  diagnostic_cost_limit.sh  full.sh  goal_conditioning_sweep.sh  goal_mask_sweep.sh  pid_gain_sweep.sh  relative_xy_sweep.sh  relxy_200epoch_3seed.sh  relxy_200epoch_seeds345.sh  relxy_cmdp_300epoch_3seed.sh  relxy_cmdp_nuc1e2_200epoch_6seed.sh  relxy_cmdp_sweep.sh  relxy_depth_cmdp_200epoch.sh  relxy_depth_pid_off_200epoch.sh  relxy_final_3seed.sh  relxy_long_3seed.sh  relxy_pid_off_300epoch_6seed.sh  relxy_pid_pressure_sweep.sh  smoke.sh  train_pointgoal1.sh  xy_goal_sweep.sh
src/sr_cpo/: __init__.py  dual_estimator.py  env_wrappers.py  goal_space.py  losses.py  networks.py  pid_lagrangian.py  probes.py  replay_buffer.py  train.py
tests/: conftest.py  test_compare_depth_sweeps.py  test_dual_estimator.py  test_env_wrappers.py  test_losses.py  test_networks.py  test_pid_lagrangian.py  test_probes.py  test_replay_buffer.py  test_slurm_scripts.py  test_smoke_script.py  test_summarize_relxy_logs.py  test_train.py  test_train_full_script.py
